<resources>
    <string name="app_name">P2PCarpool</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Profile</string>
    <string name="title_section3">Search</string>
    <string name="title_section4">Host</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="search_button">Search</string>
    <string name="profile_button">Profile</string>
    <string name="title_activity_search">Search Group</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile">Profile</string>
    <string name="group_room_button">Room</string>
    <string name="title_activity_group_room">Group Chatroom</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="host_button">Host</string>

    <!-- Added by Kevin -->
    <string name="title">P2P Car Pooling</string>
    <string name="author_name">By Kenny Sung, Yin Lin, Kaidi Yan</string>
    <string name="enter_name">Enter your name</string>
    <string name="btn_host">HOST</string>
    <string name="btn_search">SEARCH</string>
    <string name="btn_profile">PROFILE</string>
    <string name="btn_send">Send</string>

</resources>
