<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="341dp"
            android:layout_height="208dp"
            android:layout_gravity="center_horizontal|bottom"
            android:weightSum="1">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_button"
                android:id="@+id/search_button"
                android:layout_weight="0.10"
                android:textSize="25dp"
                android:layout_margin="5dp"
                android:background="#394e9d"
                android:textColor="#ffffffff" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_button"
                android:id="@+id/profile_button"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.10"
                android:textSize="25dp"
                android:layout_margin="5dp"
                android:background="#394e9d"
                android:textColor="#ffffffff" />
            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/group_room_button"
                android:id="@+id/group_room_button"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.10"
                android:textSize="25dp"
                android:layout_margin="5dp"
                android:background="#394e9d"
                android:textColor="#ffffffff" />
        </LinearLayout>

        <ImageView
            android:layout_width="317dp"
            android:layout_height="317dp"
            android:id="@+id/imageView"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/home01" />

    </FrameLayout>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead. -->
    <!-- The drawer is given a fixed width in dp and extends the full height of
         the container. -->
    <fragment android:id="@+id/navigation_drawer"
        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
        android:layout_gravity="start"
        android:name="edu.cmu.group08.p2pcarpool.NavigationDrawerFragment"
        tools:layout="@layout/fragment_navigation_drawer" />

</android.support.v4.widget.DrawerLayout>
